feat: introducing architecting of layers

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
 
 
   </head>
-
-  <body>JavaScript Torando</noscript>
+<div>Error 404</div>
+  <noscript>JavaScript Torando</noscript>
     <div id="root"></div>
   </body>
 </html>
